@@ -31,6 +31,8 @@ main (int argc, char *argv[])
   // Open our demo PDF
   if ((demo = panda_open ("output.pdf", "w")) == NULL)
     panda_error ("demo: could not open output.pdf to write to.");
+  panda_setproperty(demo->pages, panda_scope_cascade,
+		    panda_object_property_compress, panda_true);
 
   ///////////////////////////////////////////////////////////////////////////
   // Image functionality
@@ -38,7 +40,7 @@ main (int argc, char *argv[])
 
   // Create a page
   currPage = panda_newpage (demo, panda_pagesize_a4);
-  
+
   // Put in the background images
   panda_imagebox (demo, currPage, 0, 0, currPage->height / 2,
 		  currPage->width, "input.tif", panda_image_tiff);
