@@ -2,10 +2,21 @@
 
 # This script makes the world nice-looking for the world.
 
+cd man
+rm *sgml
+cd ..
+
 for item in `ls *.c`
 do
   ~mikal/autodocbook/autodocbook $item
 done
+
+cd man
+for item in `ls *sgml`
+do
+  /usr/local/bin/docbook-to-man < $item > `echo $item | sed 's/sgml/3/'`
+done
+cd ..
 
 automake
 autoconf
@@ -29,7 +40,7 @@ for filename in $delname
 do
   for item in `find . -name $filename -print`
   do
-    rm -i $item
+    rm -ri $item
   done
 done
 
